--- a/index.html
+++ b/index.html
@@ -18,51 +18,51 @@
     <div class="box1">
        <div class="container mt-3">
            <div class="slots slot-1">
-               <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS"><i class="fa-solid fa-chevron-left text-white icon"></i></a>
+               <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER"><i class="fa-solid fa-chevron-left text-white icon"></i></a>
            </div>
            <div class="slots slot-2"></div>
            <div class="slots slot-3">
                <div class="dots-top float-end">
-                   <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS"><div class="dot1 dots"></div></a>
-                   <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS"><div class="dot2 dots"></div></a>
-                   <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS"><div class="dot3 dots"></div></a>
+                   <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER"><div class="dot1 dots"></div></a>
+                   <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER"><div class="dot2 dots"></div></a>
+                   <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER"><div class="dot3 dots"></div></a>
                </div>
            </div>
        </div>
     </div>
     <div class="box2">
        <div class="container flexbox">
-           <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS"><img src="images/5 - Copy.jpg" alt="" class="rounded-50 p-picture"></a>
+           <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER"><img src="images/5 - Copy.jpg" alt="" class="rounded-50 p-picture"></a>
        </div>
     </div>
     <section>
        <div class="name-section container">
            <div class="profile-name-section">
                <div class="profile-name">
-                   <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS" class="ancor"><h1 class="text-white cc">Amanda Franklin</h1></a>
+                   <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER" class="ancor"><h1 class="text-white cc">Amanda Franklin</h1></a>
                </div>
                <div class="active-icon">
                    <img src="images/active.png" alt="" class="active-icon">
                </div>
            </div>
           
-           <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS" class="ancor"><p class="text-white text-center">I Love Traveling</p></a>
+           <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER" class="ancor"><p class="text-white text-center">I Love Traveling</p></a>
         </div>
     </section>
     <section>
        <div class="follower-section">
            <div class="container">
                <div class="post slots center bor">
-                   <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS" class="ancor"><h2 class="text-white">483</h2></a>
-                   <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS" class="ancor"><p class="text-white xyz">Posts</p></a>
+                   <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER" class="ancor"><h2 class="text-white">483</h2></a>
+                   <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER" class="ancor"><p class="text-white xyz">Posts</p></a>
                </div>
                <div class="post slots center bol">
-                   <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS" class="ancor"><h2 class="text-white">54,844</h2></a>
-                   <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS" class="ancor"><p class="text-white">Follower</p></a>
+                   <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER" class="ancor"><h2 class="text-white">54,844</h2></a>
+                   <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER" class="ancor"><p class="text-white">Follower</p></a>
                </div>
                <div class="post slots center">
-                   <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS" class="ancor"><h2 class="text-white">302</h2></a>
-                   <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS" class="ancor"><p class="text-white">Following</p></a>
+                   <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER" class="ancor"><h2 class="text-white">302</h2></a>
+                   <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER" class="ancor"><p class="text-white">Following</p></a>
                </div>
            </div>
        </div>
@@ -70,8 +70,8 @@
     <section>
         <div class="massege-follow">
             <div class="container flazbox">
-                <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS" class="btn btn-primaryi battons">Follow</a>
-                <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS" class="btn btn-outline-light battons">Massege</a>
+                <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER" class="btn btn-primaryi battons">Follow</a>
+                <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER" class="btn btn-outline-light battons">Massege</a>
             </div>
         </div>
     </section>
@@ -79,14 +79,14 @@
        <div class="bar-section">
            <div class="container">
                <div class="slots center">
-                   <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS" class="ancor"><p class="text-white">Posts</p></a>
+                   <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER" class="ancor"><p class="text-white">Posts</p></a>
                    <div class="dag"></div>
                </div>
                <div class="slots center">
-                   <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS" class="ancor"><p class="text-white">Tagged</p></a>
+                   <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER" class="ancor"><p class="text-white">Tagged</p></a>
                </div>
                <div class="slots center">
-                   <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS" class="ancor"><p class="text-white">Activity</p></a>
+                   <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER" class="ancor"><p class="text-white">Activity</p></a>
                </div>
            </div>
        </div>
@@ -94,14 +94,14 @@
     <section>
        <div class="image-section">
            <div class="container">
-               <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS"><img src="images/1.jpg" alt="" class="pictures"></a>
-               <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS"><img src="images/2.jpg" alt="" class="pictures"></a>
-               <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS"><img src="images/3.jpg" alt="" class="pictures"></a>
-               <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS"><img src="images/4.jpg" alt="" class="pictures"></a>
-               <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS"><img src="images/5.jpg" alt="" class="pictures"></a>
-               <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS"><img src="images/6.jpg" alt="" class="pictures"></a>
+               <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER"><img src="images/1.jpg" alt="" class="pictures"></a>
+               <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER"><img src="images/2.jpg" alt="" class="pictures"></a>
+               <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER"><img src="images/3.jpg" alt="" class="pictures"></a>
+               <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER"><img src="images/4.jpg" alt="" class="pictures"></a>
+               <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER"><img src="images/5.jpg" alt="" class="pictures"></a>
+               <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER"><img src="images/6.jpg" alt="" class="pictures"></a>
            <div class="see-more">
-            <a href="https://krabiclick.com/?a=9971&c=77627&s1=MOMS" class="ancor hover-effect"><p class="see-more-text text-white">See More</p></a>
+            <a href="https://krabiclick.com/?a=9948&c=68465&s1=FER" class="ancor hover-effect"><p class="see-more-text text-white">See More</p></a>
         </div>
        </div>
     </section>
